# Bossio_Manrique_Proyecto_Julio

./: README.md  pyproject.toml
Codigo/: app.py
Datos/: Consulta.ipynb
